[REFACTOR] Fixed controller test to pass